--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 assets/
+build/
+dist/
+nbproject/
+resources/
+test/
 build.xml
 lwjgl64.dll
 MANIFEST.MF
 master-application.jnlp
-nbproject/
 OpenAL64.dll
-test/
